--- a/modeler/package.json
+++ b/modeler/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "bpmn-js": "^17.9.2",
+    "bpmn-js-example-modeler": "file:",
     "diagram-js": "^14.9.0",
     "jquery": "^3.3.1"
   }
